<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textSize="17sp"
        android:textColor="@color/toolbar_text"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_sure_msg"
        android:textColor="@color/toolbar_text"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        android:layout_marginTop="12dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:padding="4dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/colorAccent"/>

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/no"
            android:padding="4dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/colorAccent"/>


    </LinearLayout>

</LinearLayout>