<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_layout_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/flStart"
        android:layout_width="match_parent"
        android:contentDescription="@string/image"
        android:src="@drawable/img_main_page"
        android:layout_height="220dp"/>

    <FrameLayout
        android:id="@+id/flStart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/item_color_accent_border_ripple_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_button_text_size" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBmi"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/accent_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flStart">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bmi"
            android:textColor="@color/white"
            android:textSize="@dimen/default_button_text_size" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/flHistory"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/accent_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flStart">

        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_calendar_month_24"
            android:text="@string/bmi"
            android:textSize="@dimen/default_button_text_size" />


    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:text="@string/calculator"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flBmi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="64dp"
        android:text="@string/history"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flHistory" />

</androidx.constraintlayout.widget.ConstraintLayout>